--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "app.css": "css/app.55a7ac.css",
+  "app.css": "css/app.cd044b.css",
   "app.js": "js/app.92d167.js",
-  "editor.css": "css/editor.0acb20.css",
+  "editor.css": "css/editor.a0fc8f.css",
   "editor.js": "js/editor.eabed1.js",
   "runtime.js": "js/runtime.b3d092.js",
   "images/bg.jpg": "images/bg.96345b.jpg",
