--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "app.css": "css/app.0c7358.css",
-  "app.js": "js/app.92d167.js",
+  "app.js": "js/app.ae70e8.js",
   "editor.css": "css/editor.ac6d2c.css",
   "editor.js": "js/editor.eabed1.js",
   "runtime.js": "js/runtime.b3d092.js",
