--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "app.css": "css/app.13f38b.css",
+  "app.css": "css/app.45816c.css",
   "app.js": "js/app.30b996.js",
-  "editor.css": "css/editor.acfd60.css",
+  "editor.css": "css/editor.282c3d.css",
   "editor.js": "js/editor.eabed1.js",
   "runtime.js": "js/runtime.b3d092.js",
   "images/bg.jpg": "images/bg.96345b.jpg",
