--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "app.css": "css/app.c5e001.css",
+  "app.css": "css/app.20adec.css",
   "app.js": "js/app.b0de11.js",
-  "editor.css": "css/editor.e8a8d5.css",
+  "editor.css": "css/editor.4e6392.css",
   "editor.js": "js/editor.eabed1.js",
   "runtime.js": "js/runtime.b3d092.js",
   "images/bg.jpg": "images/bg.96345b.jpg",
