--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "app.css": "css/app.ec45bc.css",
+  "app.css": "css/app.ed88b8.css",
   "app.js": "js/app.b0de11.js",
-  "editor.css": "css/editor.85a522.css",
+  "editor.css": "css/editor.cb12aa.css",
   "editor.js": "js/editor.eabed1.js",
   "runtime.js": "js/runtime.b3d092.js",
   "images/bg.jpg": "images/bg.96345b.jpg",
