--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "app.css": "css/app.87e878.css",
+  "app.css": "css/app.3e7fa9.css",
   "app.js": "js/app.b0de11.js",
-  "editor.css": "css/editor.e3bdec.css",
+  "editor.css": "css/editor.2eb2f9.css",
   "editor.js": "js/editor.eabed1.js",
   "runtime.js": "js/runtime.b3d092.js",
   "images/bg.jpg": "images/bg.96345b.jpg",
