--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "app.css": "css/app.92f561.css",
+  "app.css": "css/app.d7368c.css",
   "app.js": "js/app.b0de11.js",
-  "editor.css": "css/editor.d97249.css",
+  "editor.css": "css/editor.00410a.css",
   "editor.js": "js/editor.eabed1.js",
   "runtime.js": "js/runtime.b3d092.js",
   "images/bg.jpg": "images/bg.96345b.jpg",
