--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "app.css": "css/app.fbe9a9.css",
-  "app.js": "js/app.e21790.js",
+  "app.js": "js/app.b0de11.js",
   "editor.css": "css/editor.efc1e9.css",
   "editor.js": "js/editor.eabed1.js",
   "runtime.js": "js/runtime.b3d092.js",
