--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "app.css": "css/app.fbe9a9.css",
+  "app.css": "css/app.4d8cf6.css",
   "app.js": "js/app.b0de11.js",
-  "editor.css": "css/editor.efc1e9.css",
+  "editor.css": "css/editor.de03a9.css",
   "editor.js": "js/editor.eabed1.js",
   "runtime.js": "js/runtime.b3d092.js",
   "images/bg.jpg": "images/bg.96345b.jpg",
